Add space reference support to resources and datasources
